--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,4 +38,23 @@
   <div>
     N.B.: Gli orari sono in utc, quindi GMT+0.
   </div>
+  <div class="footer">
+    <div>
+      <p>
+        Se questa pagina ti è stata utile puoi contribuirne allo sviluppo sostenendomi con una donazione su PayPal.<br>
+        <a href="https://paypal.me/mirkio?country.x=IT&locale.x=it_IT">Il mio conto PayPal</a>
+      </p>
+      <p>
+        Per qualsiasi informazione, collaborazione, richiesta o segnalazione, puoi scrivermi alla mail <a href="mailto:mirko.lance@gmail.com">mirko.lance@gmail.com</a>.
+      </p>
+      <div>Mirko Lancerotto</div>
+      <div class="socials">
+        <a href="http://www.mirkolancerotto.it/" class="fa fa-globe"></a>
+        <a href="https://www.facebook.com/mirko.lancerotto/" class="fab fa-facebook"></a>
+        <a href="https://www.instagram.com/mirko.lancerotto/" class="fab fa-instagram"></a>
+        <a href="https://www.youtube.com/@mirkolancerotto" class="fab fa-youtube"></a>
+        <a href="https://www.tiktok.com/@mirkolancerotto" class="fab fa-tiktok"></a>
+      </div>
+    </div>
+  </div>
 </div>
