aggiunto mercurio, venere e timezone

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,8 +35,9 @@
       </tbody>
     </table>
   </div>
+  <div>Timezone {{timezoneGuess}}</div>
   <div>
-    N.B.: Gli orari sono in utc, quindi GMT+0.
+    N.B.: Gli orari prendono in considerazione anche l'ora legale.
   </div>
   <div class="footer">
     <div>
